--- a/barbershop/card_product.html
+++ b/barbershop/card_product.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Магазин</title>
 </head>
-<body>
+<body class="inner-page">
     <header class="main-header">
         <nav class="main-navigation">
             <a href="index.html" class="main-header-logo">
