--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 					<a class="projects-link" href="../mogo/index.html">"MoGo" site layout</a>
 					<a href="../howTo/menu/IconBar/IconBar.html" class="projects-link">Icon Bar</a>
 					<a href="../howTo/menu/menuIcon.html" class="projects-link">Menu Icon</a>
+					<a href="../howTo/images/image-overlay-title.html" class="projects-link">Image Overlay Title</a>
 				</div>
 			</div>
 		</section>
