--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 					<a href="../howTo/images/imageOvarlayIcon/imageOverlayIcon.html" class="projects-link">Image Overlay Icon</a>
 					<a href="../howTo/menu/accordion.html" class="projects-link">Accordion</a>
 					<a href="../howTo/animations/animating-variable-fonts.html" class="projects-link">Animating Variable Fonts</a>
+					<a href="../howTo/images/snakeAnImage/snake-an-image.html" class="projects-link">Snake an image</a>
 				</div>
 			</div>
 
