--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 					<a href="../howTo/menu/tabs.html" class="projects-link">Tabs</a>
 					<a href="../howTo/menu/topNavigation.html" class="projects-link">Top Navigation</a>
 					<a href="../howTo/menu/fixedSidebar.html" class="projects-link">Fixed Sidebar</a>
+					<a href="../howTo/menu/hoverableDropdown.html" class="projects-link">Hoverable Dropdown</a>
 				</div>
 			</div>
 
