--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 					<a href="../howTo/menu/subnav.html" class="projects-link">Subnav</a>
 					<a href="../howTo/buttons/alertButtons.html" class="projects-link">Alert Buttons</a>
 					<a href="../howTo/animations/test-my-animation/testMyAnimation.html" class="projects-link">Test My Animation</a>
+					<a href="../howTo/forms/CSSSkillBar.html" class="projects-link">CSS Skills Bar</a>
 				</div>
 			</div>
 
