--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 					<a href="../howTo/buttons/alertButtons.html" class="projects-link">Alert Buttons</a>
 					<a href="../howTo/animations/test-my-animation/testMyAnimation.html" class="projects-link">Test My Animation</a>
 					<a href="../howTo/forms/CSSSkillBar.html" class="projects-link">CSS Skills Bar</a>
+					<a href="../howTo/icons/test-google-icon.html" class="projects-link">Add Icons With Google</a>
 				</div>
 			</div>
 
