--- a/howTo/icons/test-google-icon.html
+++ b/howTo/icons/test-google-icon.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 
       <style>
 
@@ -40,7 +40,7 @@
 
             p {
                 font-size: 32px;
-                font-family: 'Anton', sans-serif;
+                font-family: 'Indie Flower', cursive;;
             }
 
 
