--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 					<a href="../howTo/slider/slider.html" class="projects-link">Slider</a>
 					<a href="../howTo/examples/bungeeExample.html" class="projects-link">Vertical Text</a>
 					<a href="../howTo/menu/fixedTopMenu.html" class="projects-link">Fixed Top Menu</a>
+					<a href="../howTo/page/responsiveDesign/responsiveDesign.html" class="projects-link">Responsive Design</a>
 				</div>
 			</div>
 
