--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 					<a href="../howTo/page/grid.html" class="projects-link">GRID Layaut</a>
 					<a href="../howTo/page/flexBox/flexBoxTest.html" class="projects-link">Flex Container</a>
 					<a href="../howTo/images/image with form/pictureWithForm.html" class="projects-link">Picture With Form</a>
-					<a href="../howTo/page/siteExample.html" class="projects-link">Site example</a>
+					<a href="../howTo/page/siteExample.html" class="projects-link">Site Example</a>
+					<a href="../howTo/page/siteExampleW3/siteExampleW3.html">Site Example w3</a>
 				</div>
 			</div>
 
