--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<a href="../howTo/page/flexBox/flexBoxTest.html" class="projects-link">Flex Container</a>
 					<a href="../howTo/images/image with form/pictureWithForm.html" class="projects-link">Picture With Form</a>
 					<a href="../howTo/page/siteExample.html" class="projects-link">Site Example</a>
-					<a href="../howTo/page/siteExampleW3/siteExampleW3.html">Site Example w3</a>
+					<a href="../howTo/page/siteExampleW3/siteExampleW3.html" class="projects-link">Site Example w3</a>
 				</div>
 			</div>
 
