--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 					<a href="../howTo/images/image with form/pictureWithForm.html" class="projects-link">Picture With Form</a>
 					<a href="../howTo/page/siteExample.html" class="projects-link">Site Example</a>
 					<a href="../howTo/page/siteExampleW3/siteExampleW3.html" class="projects-link">Site Example w3</a>
+					<a href="../howTo/page/contact/contact.html" class="projects-link">Form Contact</a>
 				</div>
 			</div>
 
