--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 					<a href="../howTo/page/siteExample.html" class="projects-link">Site Example</a>
 					<a href="../howTo/page/siteExampleW3/siteExampleW3.html" class="projects-link">Site Example w3</a>
 					<a href="../howTo/page/contact/contact.html" class="projects-link">Form Contact</a>
+					<a href="../AndreySavchenkov.github.io/howTo/map/myFirstMap.html" class="projects-link">Google Map</a>
 				</div>
 			</div>
 
