--- a/index.html
+++ b/index.html
@@ -1,253 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="keywords"
-      content="Frontend,Web,dev,programing,html,CSS,GIT,JS"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="normalize.css" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Andrey Savchenknov</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Days+One|Kaushan+Script|Swanky+and+Moo+Moo&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="shortcut icon" type="image/png" href="../img/favicon.png" />
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <div class="header">
-          <div class="header--myName">
-            <h1 class="my_name">Andrey Savchenkov</h1>
-            <h2 class="my_position">Frontend Developer</h2>
-          </div>
-          <div class="header--myFoto">
-            <img class="face" src="img/face.png" alt="face" />
-          </div>
-          <div class="header--mySocial">
-            <a href="https://github.com/AndreySavchenkov" aria-label="github"
-              ><img src="img/social-icon/github.png" alt="github"
-            /></a>
-            <a
-              href="https://www.linkedin.com/in/andrey-savchenkov/"
-              aria-label="linkedin"
-              ><img src="img/social-icon/lindedin.png" alt="linkedin"
-            /></a>
-            <a
-              href="https://www.instagram.com/savchenkov_andrey1/"
-              aria-label="instagram"
-              ><img src="img/social-icon/instagramm.png" alt="instagramm"
-            /></a>
-            <a href="https://vk.com/savchenkov1990" aria-label="vkontakte"
-              ><img src="img/social-icon/vk.png" alt="vk"
-            /></a>
-            <a href="viber://add?number=375336721429" aria-label="viber"
-              ><img src="img/social-icon/viber.png" alt="viber"
-            /></a>
-            <a href="tel:+375336721429" aria-label="phone_number"
-              ><img src="img/social-icon/phone.png" alt="phone"
-            /></a>
-          </div>
-        </div>
-      </div>
-    </header>
-    <!-- my skills -->
-    <section>
-      <div class="container">
-        <div class="skills">
-          <div class="hard--skills">
-            <h2>Hard skills:</h2>
-            <ul>
-              <li>HTML5</li>
-              <li>CSS3</li>
-              <li>GIT</li>
-              <li>JS</li>
-              <li>PHOTOSHOP</li>
-            </ul>
-          </div>
-          <div class="soft--skills">
-            <h2>Soft skills:</h2>
-            <ul>
-              <li>English</li>
-              <li>Organization</li>
-              <li>Accuracy</li>
-              <li>High learning</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section>
-      <div class="container">
-        <div class="projects">
-          <h2 class="h2--project">My projects:</h2>
-          <a class="projects-link" href="../mogo/index.html"
-            >"MoGo" site layout</a
-          >
-          <a href="../howTo/menu/IconBar/IconBar.html" class="projects-link"
-            >Icon Bar</a
-          >
-          <a href="../howTo/menu/menuIcon.html" class="projects-link"
-            >Menu Icon</a
-          >
-          <a
-            href="../howTo/images/image-overlay-title.html"
-            class="projects-link"
-            >Image Overlay Title</a
-          >
-          <a
-            href="../howTo/images/imageOvarlayIcon/imageOverlayIcon.html"
-            class="projects-link"
-            >Image Overlay Icon</a
-          >
-          <a href="../howTo/menu/accordion.html" class="projects-link"
-            >Accordion</a
-          >
-          <a
-            href="../howTo/animations/animating-variable-fonts.html"
-            class="projects-link"
-            >Animating Variable Fonts</a
-          >
-          <a
-            href="../howTo/images/snakeAnImage/snake-an-image.html"
-            class="projects-link"
-            >Snake an image</a
-          >
-          <a href="../howTo/menu/tabs.html" class="projects-link">Tabs</a>
-          <a href="../howTo/menu/topNavigation.html" class="projects-link"
-            >Top Navigation</a
-          >
-          <a href="../howTo/menu/fixedSidebar.html" class="projects-link"
-            >Fixed Sidebar</a
-          >
-          <a href="../howTo/menu/hoverableDropdown.html" class="projects-link"
-            >Hoverable Dropdown</a
-          >
-          <a href="../howTo/menu/navigationBar.html" class="projects-link"
-            >Bottom Navigation Bar</a
-          >
-          <a href="../howTo/menu/tabHeaders.html" class="projects-link"
-            >Tab Header</a
-          >
-          <a href="../howTo/menu/hoverSidenavButtons.html" class="projects-link"
-            >Hover Sidenav Buttons</a
-          >
-          <a href="../howTo/menu/subnav.html" class="projects-link">Subnav</a>
-          <a href="../howTo/buttons/alertButtons.html" class="projects-link"
-            >Alert Buttons</a
-          >
-          <a
-            href="../howTo/animations/test-my-animation/testMyAnimation.html"
-            class="projects-link"
-            >Test My Animation</a
-          >
-          <a href="../howTo/forms/CSSSkillBar.html" class="projects-link"
-            >CSS Skills Bar</a
-          >
-          <a href="../howTo/icons/test-google-icon.html" class="projects-link"
-            >Add Icons With Google</a
-          >
-          <a href="../howTo/slider/slider.html" class="projects-link">Slider</a>
-          <a href="../howTo/examples/bungeeExample.html" class="projects-link"
-            >Vertical Text</a
-          >
-          <a href="../howTo/menu/fixedTopMenu.html" class="projects-link"
-            >Fixed Top Menu</a
-          >
-          <a
-            href="../howTo/page/responsiveDesign/responsiveDesign.html"
-            class="projects-link"
-            >Responsive Design</a
-          >
-          <a href="../howTo/page/grid.html" class="projects-link"
-            >GRID Layaut</a
-          >
-          <a href="../howTo/page/flexBox/flexBoxTest.html" class="projects-link"
-            >Flex Container</a
-          >
-          <a
-            href="../howTo/images/image with form/pictureWithForm.html"
-            class="projects-link"
-            >Picture With Form</a
-          >
-          <a href="../howTo/page/siteExample.html" class="projects-link"
-            >Site Example</a
-          >
-          <a
-            href="../howTo/page/siteExampleW3/siteExampleW3.html"
-            class="projects-link"
-            >Site Example w3</a
-          >
-          <a href="../howTo/page/contact/contact.html" class="projects-link"
-            >Form Contact</a
-          >
-          <a href="../howTo/map/myFirstMap.html" class="projects-link"
-            >Google Map</a
-          >
-          <a href="../howTo/page/counter.html" class="projects-link">Counter</a>
-          <a
-            href="../howTo/images/miniImage/miniImage.html"
-            class="projects-link"
-            >Mini Image</a
-          >
-          <a href="../howTo/table/tableRomashka.html" class="projects-link"
-            >Table Menu Cafe</a
-          >
-          <a href="../howTo/icons/loader.html" class="projects-link">Loader</a>
-          <a href="../howTo/page/block1.html" class="projects-link"
-            >Portfolio Blocks</a
-          >
-          <a href="../howTo/page/block2.html" class="projects-link"
-            >Block with Screenshot</a
-          >
-          <a href="../howTo/page/block3.html" class="projects-link"
-            >Animation Block</a
-          >
-        </div>
-      </div>
-    </section>
-    <footer></footer>
 
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
-      (function (m, e, t, r, i, k, a) {
-        m[i] =
-          m[i] ||
-          function () {
-            (m[i].a = m[i].a || []).push(arguments);
-          };
-        m[i].l = 1 * new Date();
-        (k = e.createElement(t)),
-          (a = e.getElementsByTagName(t)[0]),
-          (k.async = 1),
-          (k.src = r),
-          a.parentNode.insertBefore(k, a);
-      })(
-        window,
-        document,
-        "script",
-        "https://mc.yandex.ru/metrika/tag.js",
-        "ym"
-      );
+<head>
+  <meta charset="utf-8" />
+  <meta name="keywords" content="Frontend,Web,dev,programing,html,CSS,GIT,JS" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="normalize.css" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Andrey Savchenknov</title>
+  <link href="https://fonts.googleapis.com/css?family=Days+One|Kaushan+Script|Swanky+and+Moo+Moo&display=swap"
+    rel="stylesheet" />
+  <link rel="shortcut icon" type="image/png" href="../img/favicon.png" />
+</head>
 
-      ym(61187872, "init", {
-        clickmap: true,
-        trackLinks: true,
-        accurateTrackBounce: true,
-        webvisor: true,
-      });
-    </script>
-    <noscript
-      ><div>
-        <img
-          src="https://mc.yandex.ru/watch/61187872"
-          style="position: absolute; left: -9999px;"
-          alt=""
-        /></div
-    ></noscript>
-    <!-- /Yandex.Metrika counter -->
-  </body>
+<body>
+  <header>
+    <div class="container">
+      <div class="header">
+        <div class="header--myName">
+          <h1 class="my_name">Andrey Savchenkov</h1>
+          <h2 class="my_position">Frontend Developer</h2>
+        </div>
+        <div class="header--myFoto">
+          <img class="face" src="img/face.png" alt="face" />
+        </div>
+        <div class="header--mySocial">
+          <a href="https://github.com/AndreySavchenkov" aria-label="github"><img src="img/social-icon/github.png"
+              alt="github" /></a>
+          <a href="https://www.linkedin.com/in/andrey-savchenkov/" aria-label="linkedin"><img
+              src="img/social-icon/lindedin.png" alt="linkedin" /></a>
+          <a href="https://www.instagram.com/savchenkov_andrey1/" aria-label="instagram"><img
+              src="img/social-icon/instagramm.png" alt="instagramm" /></a>
+          <a href="https://vk.com/savchenkov1990" aria-label="vkontakte"><img src="img/social-icon/vk.png"
+              alt="vk" /></a>
+          <a href="viber://add?number=375336721429" aria-label="viber"><img src="img/social-icon/viber.png"
+              alt="viber" /></a>
+          <a href="tel:+375336721429" aria-label="phone_number"><img src="img/social-icon/phone.png" alt="phone" /></a>
+        </div>
+      </div>
+    </div>
+  </header>
+  <!-- my skills -->
+  <section>
+    <div class="container">
+      <div class="skills">
+        <div class="hard--skills">
+          <h2>Hard skills:</h2>
+          <ul>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>GIT</li>
+            <li>JS</li>
+            <li>PHOTOSHOP</li>
+          </ul>
+        </div>
+        <div class="soft--skills">
+          <h2>Soft skills:</h2>
+          <ul>
+            <li>English</li>
+            <li>Organization</li>
+            <li>Accuracy</li>
+            <li>High learning</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="container">
+      <div class="projects">
+        <h2 class="h2--project">My projects:</h2>
+        <a class="projects-link" href="../mogo/index.html">"MoGo" site layout</a>
+        <a href="../howTo/menu/IconBar/IconBar.html" class="projects-link">Icon Bar</a>
+        <a href="../howTo/menu/menuIcon.html" class="projects-link">Menu Icon</a>
+        <a href="../howTo/images/image-overlay-title.html" class="projects-link">Image Overlay Title</a>
+        <a href="../howTo/images/imageOvarlayIcon/imageOverlayIcon.html" class="projects-link">Image Overlay Icon</a>
+        <a href="../howTo/menu/accordion.html" class="projects-link">Accordion</a>
+        <a href="../howTo/animations/animating-variable-fonts.html" class="projects-link">Animating Variable Fonts</a>
+        <a href="../howTo/images/snakeAnImage/snake-an-image.html" class="projects-link">Snake an image</a>
+        <a href="../howTo/menu/tabs.html" class="projects-link">Tabs</a>
+        <a href="../howTo/menu/topNavigation.html" class="projects-link">Top Navigation</a>
+        <a href="../howTo/menu/fixedSidebar.html" class="projects-link">Fixed Sidebar</a>
+        <a href="../howTo/menu/hoverableDropdown.html" class="projects-link">Hoverable Dropdown</a>
+        <a href="../howTo/menu/navigationBar.html" class="projects-link">Bottom Navigation Bar</a>
+        <a href="../howTo/menu/tabHeaders.html" class="projects-link">Tab Header</a>
+        <a href="../howTo/menu/hoverSidenavButtons.html" class="projects-link">Hover Sidenav Buttons</a>
+        <a href="../howTo/menu/subnav.html" class="projects-link">Subnav</a>
+        <a href="../howTo/buttons/alertButtons.html" class="projects-link">Alert Buttons</a>
+        <a href="../howTo/animations/test-my-animation/testMyAnimation.html" class="projects-link">Test My Animation</a>
+        <a href="../howTo/forms/CSSSkillBar.html" class="projects-link">CSS Skills Bar</a>
+        <a href="../howTo/icons/test-google-icon.html" class="projects-link">Add Icons With Google</a>
+        <a href="../howTo/slider/slider.html" class="projects-link">Slider</a>
+        <a href="../howTo/examples/bungeeExample.html" class="projects-link">Vertical Text</a>
+        <a href="../howTo/menu/fixedTopMenu.html" class="projects-link">Fixed Top Menu</a>
+        <a href="../howTo/page/responsiveDesign/responsiveDesign.html" class="projects-link">Responsive Design</a>
+        <a href="../howTo/page/grid.html" class="projects-link">GRID Layaut</a>
+        <a href="../howTo/page/flexBox/flexBoxTest.html" class="projects-link">Flex Container</a>
+        <a href="../howTo/images/image with form/pictureWithForm.html" class="projects-link">Picture With Form</a>
+        <a href="../howTo/page/siteExample.html" class="projects-link">Site Example</a>
+        <a href="../howTo/page/siteExampleW3/siteExampleW3.html" class="projects-link">Site Example w3</a>
+        <a href="../howTo/page/contact/contact.html" class="projects-link">Form Contact</a>
+        <a href="../howTo/map/myFirstMap.html" class="projects-link">Google Map</a>
+        <a href="../howTo/page/counter.html" class="projects-link">Counter</a>
+        <a href="../howTo/images/miniImage/miniImage.html" class="projects-link">Mini Image</a>
+        <a href="../howTo/table/tableRomashka.html" class="projects-link">Table Menu Cafe</a>
+        <a href="../howTo/icons/loader.html" class="projects-link">Loader</a>
+        <a href="../howTo/page/block1.html" class="projects-link">Portfolio Blocks</a>
+        <a href="../howTo/page/block2.html" class="projects-link">Block with Screenshot</a>
+        <a href="../howTo/page/block3.html" class="projects-link">Animation Block</a>
+        <a href="../howTo/menu/responsiveMenu.html" class="projects-link">Responsive Menu</a>
+      </div>
+    </div>
+  </section>
+  <footer></footer>
+
+  <!-- Yandex.Metrika counter -->
+  <script type="text/javascript">
+    (function (m, e, t, r, i, k, a) {
+      m[i] =
+        m[i] ||
+        function () {
+          (m[i].a = m[i].a || []).push(arguments);
+        };
+      m[i].l = 1 * new Date();
+      (k = e.createElement(t)),
+      (a = e.getElementsByTagName(t)[0]),
+      (k.async = 1),
+      (k.src = r),
+      a.parentNode.insertBefore(k, a);
+    })(
+      window,
+      document,
+      "script",
+      "https://mc.yandex.ru/metrika/tag.js",
+      "ym"
+    );
+
+    ym(61187872, "init", {
+      clickmap: true,
+      trackLinks: true,
+      accurateTrackBounce: true,
+      webvisor: true,
+    });
+  </script>
+  <noscript>
+    <div>
+      <img src="https://mc.yandex.ru/watch/61187872" style="position: absolute; left: -9999px;" alt="" /></div>
+  </noscript>
+  <!-- /Yandex.Metrika counter -->
+</body>
+
 </html>
