--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
         <a href="../howTo/page/block3.html" class="projects-link">Animation Block</a>
         <a href="../howTo/menu/responsiveMenu.html" class="projects-link">Responsive Menu</a>
         <a href="../howTo/menu/responsiveMenu2.html" class="projects-link">Responsive Menu for Wedding Salon</a>
-        <a href="../AndreySavchenkov.github.io/howTo/menu/responsiveMenu3.html" class="projects-link">Responsive Menu with Circles</a>
+        <a href="../howTo/menu/responsiveMenu3.html" class="projects-link">Responsive Menu with Circles</a>
+        <a href="../howTo/menu/responsiveMenu4.html" class="projects-link">Responsive Menu with Ribbon</a>
       </div>
     </div>
   </section>
