--- a/howTo/forms/registerForm/index.html
+++ b/howTo/forms/registerForm/index.html
@@ -1,28 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <script src="https://kit.fontawesome.com/7f4db95764.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <title>Registered Form</title>
-  </head>
-  <body>
-    <div class="wrapper">
-      <div class="registeredForm">
-        <p class="registeredForm__title">Авторизация</p>
 
-        <form action="">
-          <input class="registeredForm__email" placeholder="Email" type="text" />
-          <input class="registeredForm__password" placeholder="Пароль" type="password" />
-          <input class="registeredForm__submit" type="submit" />
-        </form>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="style.css" />
+	<script src="https://kit.fontawesome.com/7f4db95764.js" crossorigin="anonymous"></script>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+		rel="stylesheet" />
+	<title>Registered Form</title>
+</head>
 
-        <button class="registeredForm__register">
-          Регистрация <span>Забыли пороль?</span>
-        </button>
-      </div>
-    </div>
-  </body>
+<body>
+	<div class="wrapper">
+		<div class="registeredForm">
+			<p class="registeredForm__title">Авторизация</p>
+
+			<form action="">
+				<label><i class="far fa-envelope"></i>
+					<input class="registeredForm__email" placeholder="Email" type="text" />
+				</label>
+				<label>
+					<i class="fas fa-lock"></i>
+					<input class="registeredForm__password" placeholder="Пароль" type="password" />
+				</label>
+
+				<button class="registeredForm__button">Войти</button>
+			</form>
+
+			<button class="registeredForm__register">
+				Регистрация <span>Забыли пароль?</span>
+			</button>
+		
+		</div>
+	</div>
+</body>
+
 </html>
